update to the example

--- a/optimal_sample_size/optimal_sample_size.ipynb
+++ b/optimal_sample_size/optimal_sample_size.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "It is important to choose your confidence level now and the margin of error.\n",
     "\n",
-    "Here I will choose a confidence level of 99%, now to calculate the z-score"
+    "Here I will choose a confidence level of 95%, now to calculate the z-score"
    ]
   },
   {
@@ -97,13 +97,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z value for 99% confidence level 2.5758293035489004\n"
+      "z value for 95% confidence level 1.959963984540054\n"
      ]
     }
    ],
    "source": [
-    "z = scipy.stats.norm.ppf(1- 0.01/2)\n",
-    "print(\"z value for 99% confidence level\", z)"
+    "z = scipy.stats.norm.ppf(1- 0.05/2)\n",
+    "print(\"z value for 95% confidence level\", z)"
    ]
   },
   {
@@ -154,12 +154,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16587.24150255303\n"
+      "9603.647051735314\n"
      ]
     }
    ],
    "source": [
-    "n = (4 * z**2 * sigma**2) / (2*0.01)**2\n",
+    "n = z**2/(2*moe)**2\n",
     "print(n)"
    ]
   },
@@ -167,22 +167,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally lets do 10 tests, if correct we should (it's still random so not guarnteed) have atleast 9/10 of these tests with $\\hat{p}$ within 1% of $p$"
+    "Finally lets do 10 tests, if correct we should (it's still random so not guaranteed) have atleast 9/10 of these tests with $\\hat{p}$ within 1% of $p$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample 0 : [ True] p hat value =  0.7228116710875332\n",
-      "sample 1 : [ True] p hat value =  0.7283578490475042\n",
-      "sample 2 : [ True] p hat value =  0.7321557752592235\n",
-      "sample 3 : [ True] p hat value =  0.7267301663853388\n"
+      "sample 0 : [ True] p hat value =  0.7282382340691379\n",
+      "sample 1 : [ True] p hat value =  0.7242815493544357\n",
+      "sample 2 : [ True] p hat value =  0.7303206997084548\n",
+      "sample 3 : [ True] p hat value =  0.7235526863806747\n",
+      "sample 4 : [ True] p hat value =  0.7275093710953769\n",
+      "sample 5 : [ True] p hat value =  0.7256351520199916\n",
+      "sample 6 : [ True] p hat value =  0.7346938775510204\n",
+      "sample 7 : [ True] p hat value =  0.720637234485631\n",
+      "sample 8 : [ True] p hat value =  0.7325072886297376\n",
+      "sample 9 : [ True] p hat value =  0.7337567680133278\n"
      ]
     }
    ],
@@ -200,17 +206,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.72720018])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True p value = 0.7272001796427789\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"True p value =\", p[0])"
+   ]
   }
  ],
  "metadata": {
